--- a/RMX1851.md
+++ b/RMX1851.md
@@ -1,3 +1,11 @@
 
 # v1.0
 - Initial Official Build
+
+# v1.5
+- Initial Build with OSS vendor
+- IllusionX kernel built inline
+
+# v2.0
+- Added Moto Dolby
+- Misc Changes
