--- a/RMX1971.md
+++ b/RMX1971.md
@@ -5,3 +5,10 @@
 - KCAL Added
 - CTS passed by default
 - 2% Battery Drop Fixed
+
+# v2.5
+- Initial Build
+- Kernel upstreamed to 4.9.277 
+- KharameDirac Added moved to System
+- CTS passed by default
+- Switched to User Build
